feat(cli): enhance EasyDeploy with version resolution for Velocity and Paper, and improve cache directory handling